--- a/style.css
+++ b/style.css
@@ -20,3 +20,40 @@ button:active{
 input:focus, button:focus{
     outline: none;
 }
+
+
+/* Header */
+
+header{
+    background-image: url('https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 0;
+    position: relative;
+    height: 55vh;
+}
+
+header::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,.2);
+}
+
+/* Bring everything in the header to the front */
+header *{
+    z-index: 1;
+}
+
+header h1{
+    margin: 0 0 30px;
+}
