--- a/style.css
+++ b/style.css
@@ -86,4 +86,9 @@ form button{
     color: #fff;
     font-size: 16px;
     padding: 13px 30px;
+    transition: background-color .3s;
+}
+
+form button:hover{
+    background-color: rgba(60, 8, 64, 0.867);
 }
