--- a/style.css
+++ b/style.css
@@ -92,3 +92,50 @@ form button{
 form button:hover{
     background-color: rgba(60, 8, 64, 0.867);
 }
+
+/* button from Api */
+.btn{
+    background-color: #8d56fd;
+    border: 0;
+    border-radius: 10px;
+    color: #fff;
+    padding: 4px 10px;
+}
+
+/* list of songs */
+ul.songs{
+    list-style-type: none;
+    padding: 0;
+}
+
+li.songs li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.container{
+    margin: 30px auto;
+    max-width: 100%;
+    width: 500px;
+
+}
+
+.container h2{
+    font-weight: 300;
+}
+
+.container p{
+    text-align: center;
+}
+
+.centered{
+    display: flex;
+    justify-content: center;
+}
+
+.centered button{
+    transform: scale(1.3);
+    margin: 15px;
+}
