--- a/style.css
+++ b/style.css
@@ -108,18 +108,17 @@ ul.songs{
     padding: 0;
 }
 
-li.songs li{
+ul.songs li{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10px 0;
+    margin: 120px 0;
 }
 
 .container{
     margin: 30px auto;
     max-width: 100%;
     width: 500px;
-
 }
 
 .container h2{
@@ -138,4 +137,5 @@ li.songs li{
 .centered button{
     transform: scale(1.3);
     margin: 15px;
+    margin-left: 50px;
 }
